--- a/index.html
+++ b/index.html
@@ -351,8 +351,14 @@ div.tocify {
 </div>
 
 
-<div id="welcome" class="section level1">
-<h1>Welcome!</h1>
+<div id="motivation" class="section level2">
+<h2>Motivation</h2>
+</div>
+<div id="video-overview" class="section level2">
+<h2>Video Overview</h2>
+</div>
+<div id="exploratory-analysis" class="section level2">
+<h2>Exploratory analysis</h2>
 </div>
 
 
