--- a/quit_smoking.html
+++ b/quit_smoking.html
@@ -35,6 +35,13 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<script src="site_libs/htmlwidgets-1.5.4/htmlwidgets.js"></script>
+<script src="site_libs/plotly-binding-4.10.0/plotly.js"></script>
+<script src="site_libs/typedarray-0.1/typedarray.min.js"></script>
+<link href="site_libs/crosstalk-1.2.0/css/crosstalk.min.css" rel="stylesheet" />
+<script src="site_libs/crosstalk-1.2.0/js/crosstalk.min.js"></script>
+<link href="site_libs/plotly-htmlwidgets-css-2.5.1/plotly-htmlwidgets.css" rel="stylesheet" />
+<script src="site_libs/plotly-main-2.5.1/plotly-latest.min.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -354,11 +361,26 @@ div.tocify {
 <pre class="r"><code>#import library
 library(tidyverse)
 library(dplyr)
-library(plotly)</code></pre>
+library(plotly)
+library(viridis)
+
+knitr::opts_chunk$set(
+  echo = TRUE,
+  warning = FALSE,
+  fig.width = 10,
+  fig.height = 6,
+  out.width = &quot;90%&quot;
+)
+options(
+  ggplot2.continuous.colour = &quot;viridis&quot;,
+  ggplot2.continuous.fill = &quot;viridis&quot;
+)
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+theme_set(theme_minimal() + theme(legend.position = &quot;right&quot;))</code></pre>
 <div id="quit-smoking-analysis" class="section level2">
 <h2>Quit Smoking Analysis</h2>
 <pre class="r"><code>smk_df = read_csv(&quot;./data/adult20.csv&quot;)</code></pre>
-<pre><code>## Warning: One or more parsing issues, see `problems()` for details</code></pre>
 <pre><code>## Rows: 31568 Columns: 618</code></pre>
 <pre><code>## ── Column specification ────────────────────────────────────────────────────────
 ## Delimiter: &quot;,&quot;
@@ -377,6 +399,75 @@ library(plotly)</code></pre>
          time_quit = smkqtnp_a) %&gt;%
   select(try_quit, doctor_quit, time_quit) %&gt;% 
   filter(if_any(everything(), ~ !is.na(.)))</code></pre>
+<p>Pie charts</p>
+<pre class="r"><code>try_quit_plot = 
+  smk_df %&gt;% 
+  select(try_quit) %&gt;% 
+  drop_na() %&gt;% 
+  mutate(
+    try_quit = as.character(try_quit),
+    try_quit = str_replace(try_quit, &quot;1&quot;, &quot;Yes&quot;),
+    try_quit = str_replace(try_quit, &quot;2&quot;, &quot;No&quot;),
+    try_quit = str_replace(try_quit, &quot;7&quot;, &quot;Refused&quot;),
+    try_quit = str_replace(try_quit, &quot;8&quot;, &quot;Not Ascertained&quot;),
+    try_quit = str_replace(try_quit, &quot;9&quot;, &quot;Don&#39;t Know&quot;)
+  ) %&gt;% 
+  group_by(try_quit) %&gt;% 
+  count() %&gt;% 
+  plot_ly(labels = ~try_quit, values = ~n, type = &quot;pie&quot;,
+          marker = list(colors = c(&quot;#9ACD32&quot;, &quot;#87CEEB&quot;, &quot;#FA8072&quot;, 
+                           &quot;#FFFACD&quot;, &quot; #F5DEB3&quot;))) %&gt;% 
+  layout(title = &quot;Are you trying to stop smoking during the past year? &quot;)
+
+try_quit_plot</code></pre>
+<div id="htmlwidget-7495b6144f3ace6716a9" style="width:90%;height:576px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="htmlwidget-7495b6144f3ace6716a9">{"x":{"visdat":{"12a05139c41a":["function () ","plotlyVisDat"]},"cur_data":"12a05139c41a","attrs":{"12a05139c41a":{"labels":{},"values":{},"marker":{"colors":["#9ACD32","#87CEEB","#FA8072","#FFFACD","\t#F5DEB3"]},"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"pie"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"title":"Are you trying to stop smoking during the past year? ","hovermode":"closest","showlegend":true},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"labels":["Don't Know","No","Not Ascertained","Refused","Yes"],"values":[1,1938,4,3,1667],"marker":{"color":"rgba(31,119,180,1)","colors":["#9ACD32","#87CEEB","#FA8072","#FFFACD","\t#F5DEB3"],"line":{"color":"rgba(255,255,255,1)"}},"type":"pie","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.2,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<pre class="r"><code>doctor_quit = 
+  smk_df %&gt;% 
+  select(doctor_quit) %&gt;% 
+  drop_na() %&gt;% 
+  mutate(
+    doctor_quit = as.character(doctor_quit),
+    doctor_quit = str_replace(doctor_quit, &quot;1&quot;, &quot;Yes&quot;),
+    doctor_quit = str_replace(doctor_quit, &quot;2&quot;, &quot;No&quot;),
+    doctor_quit = str_replace(doctor_quit, &quot;7&quot;, &quot;Refused&quot;),
+    doctor_quit = str_replace(doctor_quit, &quot;8&quot;, &quot;Not Ascertained&quot;),
+    doctor_quit = str_replace(doctor_quit, &quot;9&quot;, &quot;Don&#39;t Know&quot;)
+  ) %&gt;% 
+  group_by(doctor_quit) %&gt;% 
+  count()  %&gt;% 
+  plot_ly(labels = ~doctor_quit, values = ~n, type = &quot;pie&quot;,
+              marker = list(colors = c(&quot;#9ACD32&quot;, &quot;#87CEEB&quot;, 
+                           &quot;#11AA22&quot;, &quot;#FA8072&quot;,    &quot;#F5DEB3&quot;))) %&gt;% 
+  layout(title = &quot;Has a doctor/health professional advised you about 
+         stop smoking in the past year? &quot;)
+
+doctor_quit</code></pre>
+<div id="htmlwidget-e320171fe32a08fd2222" style="width:90%;height:576px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="htmlwidget-e320171fe32a08fd2222">{"x":{"visdat":{"12a0263aaaf8":["function () ","plotlyVisDat"]},"cur_data":"12a0263aaaf8","attrs":{"12a0263aaaf8":{"labels":{},"values":{},"marker":{"colors":["#9ACD32","#87CEEB","#11AA22","#FA8072","#F5DEB3"]},"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"pie"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"title":"Has a doctor/health professional advised you about <br />         stop smoking in the past year? ","hovermode":"closest","showlegend":true},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"labels":["Don't Know","No","Not Ascertained","Refused","Yes"],"values":[4,1564,4,3,1739],"marker":{"color":"rgba(31,119,180,1)","colors":["#9ACD32","#87CEEB","#11AA22","#FA8072","#F5DEB3"],"line":{"color":"rgba(255,255,255,1)"}},"type":"pie","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.2,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+</div>
+<div id="time-since-quitting-smoking" class="section level2">
+<h2>Time since quitting smoking</h2>
+<pre class="r"><code>time_quit_plot = 
+  smk_df %&gt;% 
+  select(time_quit) %&gt;% 
+  mutate(
+    period = cut(time_quit, breaks = seq(0, 365, by = 7))
+  ) %&gt;% 
+  drop_na() %&gt;% 
+  group_by(period) %&gt;% 
+  count() %&gt;% 
+  plot_ly(y = ~n, type = &quot;bar&quot;, color = ~n,
+          #add text above the bars
+          text = ~n, textposition = &#39;auto&#39; ) %&gt;% 
+  layout(title = &quot;Time since quitting (Weeks)&quot;, 
+         xaxis = list(title = &quot;Weeks&quot;),
+         yaxis = list(title = &quot;Number of People&quot;))
+  
+time_quit_plot</code></pre>
+<div id="htmlwidget-d7e63ad8cb71e2f82f25" style="width:90%;height:576px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="htmlwidget-d7e63ad8cb71e2f82f25">{"x":{"visdat":{"12a0384e7487":["function () ","plotlyVisDat"]},"cur_data":"12a0384e7487","attrs":{"12a0384e7487":{"y":{},"text":{},"textposition":"auto","color":{},"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"bar"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"title":"Time since quitting (Weeks)","xaxis":{"domain":[0,1],"automargin":true,"title":"Weeks"},"yaxis":{"domain":[0,1],"automargin":true,"title":"Number of People"},"hovermode":"closest","showlegend":false,"legend":{"yanchor":"top","y":0.5}},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"y":[1882,1326,1298,668,1084,824,378,456,109,43,1,1,1,2],"text":[1882,1326,1298,668,1084,824,378,456,109,43,1,1,1,2],"textposition":["auto","auto","auto","auto","auto","auto","auto","auto","auto","auto","auto","auto","auto","auto"],"type":"bar","marker":{"colorbar":{"title":"n","ticklen":2},"cmin":1,"cmax":1882,"colorscale":[["0","rgba(68,1,84,1)"],["0.0416666666666667","rgba(70,19,97,1)"],["0.0833333333333333","rgba(72,32,111,1)"],["0.125","rgba(71,45,122,1)"],["0.166666666666667","rgba(68,58,128,1)"],["0.208333333333333","rgba(64,70,135,1)"],["0.25","rgba(60,82,138,1)"],["0.291666666666667","rgba(56,93,140,1)"],["0.333333333333333","rgba(49,104,142,1)"],["0.375","rgba(46,114,142,1)"],["0.416666666666667","rgba(42,123,142,1)"],["0.458333333333333","rgba(38,133,141,1)"],["0.5","rgba(37,144,140,1)"],["0.541666666666667","rgba(33,154,138,1)"],["0.583333333333333","rgba(39,164,133,1)"],["0.625","rgba(47,174,127,1)"],["0.666666666666667","rgba(53,183,121,1)"],["0.708333333333333","rgba(79,191,110,1)"],["0.75","rgba(98,199,98,1)"],["0.791666666666667","rgba(119,207,85,1)"],["0.833333333333333","rgba(147,214,70,1)"],["0.875","rgba(172,220,52,1)"],["0.916666666666667","rgba(199,225,42,1)"],["0.958333333333333","rgba(226,228,40,1)"],["1","rgba(253,231,37,1)"]],"showscale":false,"color":[1882,1326,1298,668,1084,824,378,456,109,43,1,1,1,2],"line":{"colorbar":{"title":"","ticklen":2},"cmin":1,"cmax":1882,"colorscale":[["0","rgba(68,1,84,1)"],["0.0416666666666667","rgba(70,19,97,1)"],["0.0833333333333333","rgba(72,32,111,1)"],["0.125","rgba(71,45,122,1)"],["0.166666666666667","rgba(68,58,128,1)"],["0.208333333333333","rgba(64,70,135,1)"],["0.25","rgba(60,82,138,1)"],["0.291666666666667","rgba(56,93,140,1)"],["0.333333333333333","rgba(49,104,142,1)"],["0.375","rgba(46,114,142,1)"],["0.416666666666667","rgba(42,123,142,1)"],["0.458333333333333","rgba(38,133,141,1)"],["0.5","rgba(37,144,140,1)"],["0.541666666666667","rgba(33,154,138,1)"],["0.583333333333333","rgba(39,164,133,1)"],["0.625","rgba(47,174,127,1)"],["0.666666666666667","rgba(53,183,121,1)"],["0.708333333333333","rgba(79,191,110,1)"],["0.75","rgba(98,199,98,1)"],["0.791666666666667","rgba(119,207,85,1)"],["0.833333333333333","rgba(147,214,70,1)"],["0.875","rgba(172,220,52,1)"],["0.916666666666667","rgba(199,225,42,1)"],["0.958333333333333","rgba(226,228,40,1)"],["1","rgba(253,231,37,1)"]],"showscale":false,"color":[1882,1326,1298,668,1084,824,378,456,109,43,1,1,1,2]}},"xaxis":"x","yaxis":"y","frame":null},{"x":[null,null],"y":[1,1882],"type":"scatter","mode":"markers","opacity":0,"hoverinfo":"none","showlegend":false,"marker":{"colorbar":{"title":"n","ticklen":2,"len":0.5,"lenmode":"fraction","y":1,"yanchor":"top"},"cmin":1,"cmax":1882,"colorscale":[["0","rgba(68,1,84,1)"],["0.0416666666666667","rgba(70,19,97,1)"],["0.0833333333333333","rgba(72,32,111,1)"],["0.125","rgba(71,45,122,1)"],["0.166666666666667","rgba(68,58,128,1)"],["0.208333333333333","rgba(64,70,135,1)"],["0.25","rgba(60,82,138,1)"],["0.291666666666667","rgba(56,93,140,1)"],["0.333333333333333","rgba(49,104,142,1)"],["0.375","rgba(46,114,142,1)"],["0.416666666666667","rgba(42,123,142,1)"],["0.458333333333333","rgba(38,133,141,1)"],["0.5","rgba(37,144,140,1)"],["0.541666666666667","rgba(33,154,138,1)"],["0.583333333333333","rgba(39,164,133,1)"],["0.625","rgba(47,174,127,1)"],["0.666666666666667","rgba(53,183,121,1)"],["0.708333333333333","rgba(79,191,110,1)"],["0.75","rgba(98,199,98,1)"],["0.791666666666667","rgba(119,207,85,1)"],["0.833333333333333","rgba(147,214,70,1)"],["0.875","rgba(172,220,52,1)"],["0.916666666666667","rgba(199,225,42,1)"],["0.958333333333333","rgba(226,228,40,1)"],["1","rgba(253,231,37,1)"]],"showscale":true,"color":[1,1882],"line":{"color":"rgba(255,127,14,1)"}},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.2,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<p>This bar chart</p>
 </div>
 <div id="tax" class="section level2">
 <h2>Tax</h2>
