--- a/part1_brfss.html
+++ b/part1_brfss.html
@@ -318,9 +318,49 @@ $(document).ready(function () {
   mutate (long = as.numeric(long), 
           lat = as.numeric(lat))
   
-  
-
-#I learnt aggregate function in this homework ! #aggregate(.~fruit,data=df,FUN=sum)
+#to see which states has the highest smoking proportion
+  clean_brfss %&gt;% 
+    arrange(smoking_proportion)%&gt;% 
+    select(year,locationdesc,smoking_proportion)</code></pre>
+<pre><code>## # A tibble: 265 × 3
+## # Groups:   year, locationdesc [265]
+##     year locationdesc   smoking_proportion
+##    &lt;dbl&gt; &lt;chr&gt;                       &lt;dbl&gt;
+##  1  2016 Virgin Islands             0.0267
+##  2  2020 Utah                       0.0696
+##  3  2019 Utah                       0.0714
+##  4  2016 Utah                       0.0760
+##  5  2017 Utah                       0.0816
+##  6  2018 Utah                       0.0820
+##  7  2019 Puerto Rico                0.0846
+##  8  2020 California                 0.0848
+##  9  2016 Puerto Rico                0.0868
+## 10  2020 Puerto Rico                0.0887
+## # … with 255 more rows</code></pre>
+<pre class="r"><code># to see the states with the largest proportion change 
+  clean_brfss %&gt;% 
+    arrange(smoking_proportion)%&gt;% 
+    select(year,locationdesc,smoking_proportion) %&gt;% 
+   pivot_wider(
+     names_from = year, 
+     values_from = smoking_proportion)%&gt;% 
+    drop_na()</code></pre>
+<pre><code>## # A tibble: 52 × 6
+## # Groups:   locationdesc [52]
+##    locationdesc         `2016` `2020` `2019` `2017` `2018`
+##    &lt;chr&gt;                 &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;
+##  1 Utah                 0.0760 0.0696 0.0714 0.0816 0.0820
+##  2 Puerto Rico          0.0868 0.0887 0.0846 0.0934 0.0903
+##  3 California           0.109  0.0848 0.101  0.110  0.109 
+##  4 District of Columbia 0.149  0.0959 0.117  0.148  0.121 
+##  5 Massachusetts        0.131  0.0985 0.112  0.114  0.116 
+##  6 Connecticut          0.108  0.119  0.103  0.106  0.106 
+##  7 Washington           0.116  0.112  0.117  0.118  0.104 
+##  8 Hawaii               0.120  0.107  0.123  0.120  0.128 
+##  9 Maryland             0.122  0.115  0.117  0.117  0.111 
+## 10 Vermont              0.143  0.117  0.124  0.135  0.122 
+## # … with 42 more rows</code></pre>
+<pre class="r"><code>#I learnt aggregate function in this homework ! #aggregate(.~fruit,data=df,FUN=sum)
 #or you can use group_by(id1, id2) %&gt;%  summarise_each(funs(mean) if you want to sum of rows based on column value in R dataframe
   
   #e.g  group_by(year, locationdesc) %&gt;% summarise(Frequency = sum(sample_size))
@@ -369,7 +409,7 @@ map18 = clean_brfss %&gt;%
   ylim(27,48)+ xlim(-125,-78)  +
     theme_void()+ coord_map() +
   scale_color_viridis(trans=&quot;log&quot;) +
-  labs(title = &quot;smoker proportion in each states in 2020&quot;,caption = &quot;Data from Brfss&quot;)
+  labs(title = &quot;smoker proportion in each states in 2018&quot;,caption = &quot;Data from Brfss&quot;)
 
 
 map17 = clean_brfss %&gt;% 
@@ -383,7 +423,7 @@ map17 = clean_brfss %&gt;%
   ylim(27,48)+ xlim(-125,-78)  +
     theme_void()+ coord_map() +
   scale_color_viridis(trans=&quot;log&quot;) +
-  labs(title = &quot;smoker proportion in each states in 2020&quot;,caption = &quot;Data from Brfss&quot;)
+  labs(title = &quot;smoker proportion in each states in 2017&quot;,caption = &quot;Data from Brfss&quot;)
 
 
 #ggplotly
@@ -391,6 +431,15 @@ map17 = clean_brfss %&gt;%
 #ggplotly(map19) 
 #ggplotly(map18) 
 #ggplotly(map17)</code></pre>
+<div id="which-states-has-the-highest-and-lowest-smoking-proportion" class="section level1">
+<h1>Which states has the highest and lowest smoking proportion?</h1>
+<p>From the plot, the higher the smokers’ proportion, the more yellowish the dot. Vice Versa,the smaller the smokers’ proportion, the greener the dot.</p>
+<p>Among all the U.S. states, Utah has the lowest smoking proportion in year 2017-2020.Their smoking proportion were 8.2% in both 2017 and 2018; 7.1% in 2019 and 7.0% in 2020 respectively .It even shows a slightly decreasing smoking proportion in the past 4 years.</p>
+<p>Meanwhile, West Virginia, Kentucky and Tennessee have a comparatively high smoking proportion. In year 2017,2018 and 2020, West Virginia has the highest smoking proportion in the U.S, which were 22%, 21% and 20.2% respectively. For 2019, it has the second highest smoking proportion(20.1%), which was slightly lower than that of Kentucky by approximately 0.5%.</p>
+<p>In year 2019, the state with the highest smoker proportion was Kentucky, which was 20.6 %. It’s smokers’ proportion also account for a high percentage in other years,which were 21.1 % in 2017, 19.9% in 2018, 19.4% in 2020.</p>
+<p>It is noticeable that Tennessee has a relatively low smokers’ proportion when compared to other states. Its smokers’ proportion in 21.1%, 19.9%,20.6%, 19.3% in year 2017,2018,2019 and 2020 respectively.</p>
+<p>#The states with the largest change in smokers’ proportion</p>
+</div>
 
 
 
