quit_smoke: text added

--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@ div.tocify {
 </div>
 
 
-<div id="lesi-he-xu-ke-shipei-zeng-wanxin-qi-ziyue-yang" class="section level3">
-<h3>Lesi He, Xu Ke, Shipei Zeng, Wanxin Qi, Ziyue Yang</h3>
+<div id="ke-xu-szepui-tsang-wanxin-qi-ziyue-yang-lesi-he" class="section level3">
+<h3>Ke Xu, SzePui Tsang, Wanxin Qi, Ziyue Yang, Lesi He</h3>
 </div>
 <div id="motivation" class="section level2">
 <h2>Motivation</h2>
