Edited the index

--- a/index.html
+++ b/index.html
@@ -381,18 +381,46 @@ div.tocify {
 </div>
 
 
-<div id="ke-xu-szepui-tsang-wanxin-qi-ziyue-yang-lesi-he" class="section level3">
-<h3>Ke Xu, SzePui Tsang, Wanxin Qi, Ziyue Yang, Lesi He</h3>
-</div>
+<p>Ke Xu, SzePui Tsang, Wanxin Qi, Ziyue Yang, Lesi He</p>
 <div id="motivation" class="section level2">
 <h2>Motivation</h2>
-<p>It is known that smoking causes a lot of health problems, but according to the Centers for Disease Control and Prevention (CDC), there were about 34 million U.S. adults smoke cigarettes in 2019, and 58 million nonsmoking people were exposed to secondhand smoke that severely negatively affected their health. Especially since the first laboratory-confirmed case of Covid-19 appeared in the United States on January 20, 2020, bad addictions such as smoking have been highlighted by health groups looking at their relationship with Covid-19. The CDC pointed out that smoking could lead to a higher risk of getting severe illness from Covid-19 whether current smokers or former smokers. With this information, we examined the trend of smoking in the U.S. in recent years.</p>
+<p>It is known that smoking causes a lot of health problems, but according to the <a href="https://www.cdc.gov/tobacco/about/osh/index.htm">Centers for Disease Control and Prevention (CDC)</a>, there were about 34 million U.S. adults smoke cigarettes in 2019, and 58 million nonsmoking people were exposed to secondhand smoke that severely negatively affected their health. Especially since the first laboratory-confirmed case of Covid-19 appeared in the United States on January 20, 2020, bad addictions such as smoking have been highlighted by health groups looking at their relationship with Covid-19. The CDC pointed out that smoking could lead to a higher risk of getting severe illness from Covid-19 whether current smokers or former smokers. With this information, we examined the trend of smoking in the U.S. in recent years.</p>
 </div>
-<div id="overview" class="section level2">
-<h2>Overview</h2>
+<div id="screencast" class="section level2">
+<h2>Screencast</h2>
 </div>
-<div id="video-overview" class="section level2">
-<h2>Video Overview</h2>
+<div id="data" class="section level2">
+<h2>Data</h2>
+<p>We used several datasets from <a href="https://www.cdc.gov/nchs/nhis/index.htm">the National Health Interview Survey (NHIS)</a>, <a href="https://www.cdc.gov/brfss/index.html">the Behavioral Risk Factor Surveillance System (BRFSS)</a>, . More detailed information about the datasets and the cleaning &amp; tidying process can be accessed at <a href="data.html">data</a>.</p>
+</div>
+<div id="initial-questions" class="section level2">
+<h2>Initial Questions</h2>
+<ol style="list-style-type: decimal">
+<li></li>
+<li></li>
+<li>What is the distribution of smokers among subgroups defined by demographic characteristics, during the Covid-19 pandemic?</li>
+<li>Is there a decrease in current smoking rates among people with specific medical conditions during the Covid-19 pandemic compared to the previous year?</li>
+<li></li>
+<li></li>
+</ol>
+</div>
+<div id="exploratory-analysis" class="section level2">
+<h2>Exploratory Analysis</h2>
+<ul>
+<li><p><a href="part-1-.html">Overall Smoking Trends</a></p></li>
+<li><p><a href="part1_brfss.html">Smokign Trends in Different States</a></p></li>
+<li><p><a href="smoking_and_covid19.html">Smoking During Covid-19 Pandemic</a></p></li>
+<li><p><a href="quit_smoke.html">Quit Smoking Analysis</a></p></li>
+</ul>
+</div>
+<div id="statistical-analysis" class="section level2">
+<h2>Statistical Analysis</h2>
+</div>
+<div id="overall-findings" class="section level2">
+<h2>Overall Findings</h2>
+</div>
+<div id="discussion" class="section level2">
+<h2>Discussion</h2>
 </div>
 
 
