--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -269,6 +269,9 @@ $(document).ready(function () {
     <li>
       <a href="quit_smoke.html">Quit Smoking Analysis</a>
     </li>
+    <li>
+      <a href="quite_smoke.html">Quit Smoking!</a>
+    </li>
   </ul>
 </li>
 <li>
