--- a/index.html
+++ b/index.html
@@ -405,8 +405,7 @@ div.tocify {
 <div id="initial-questions" class="section level3">
 <h3>Initial Questions</h3>
 <ol style="list-style-type: decimal">
-<li></li>
-<li></li>
+<li>What is the overall smoking trend in the years between 2017 and 2020?What is the distribution of smoker among different age group, race and sex? 2.Which states has the highest and the lowest smoking proportion? Which states has the largest increase/ decrease in smoking proportion over the past 4 years?</li>
 <li>What is the distribution of smokers among subgroups defined by demographic characteristics, during the Covid-19 pandemic?</li>
 <li>Is there a decrease in current smoking rates among people with specific medical conditions during the Covid-19 pandemic compared to the previous year?</li>
 <li></li>
